# practice

./: .gitignore  Cargo.toml  gkrfold_benchmark_results.csv  plot_benchmark_results.py
benches/: bench_gkr_fold.rs
src/: evaluate.rs  gkrfold.rs  lib.rs  libra_linear_gkr.rs  sumcheck.rs
src/sumfold/: eq.rs  fj_poly.rs  mod.rs  multilinear.rs  naive_sumcheck.rs  prover.rs  q_poly.rs  simple_sumcheck.rs
tests/: test.rs  test_gkrfold.rs  test_libra.rs  test_sumcheck.rs  test_sumfold.rs
