[package]
name = "zkp-libra"
version = "0.1.0"
authors = ["GKRFold"]
description = "a zero-knowledge proof scheme: libra."
keywords = ["cryptography", "zkp", "zero-knowledge", "libra", "gkr", "sumcheck", "sumfold"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["zkp-curve/std", "zkp-r1cs/std", "ark-ff/std", "zkp-curve/std", "ark-std/std"]
parallel = ["std", "rayon", "zkp-curve/parallel", "zkp-r1cs/parallel", "ark-ff/parallel", "zkp-curve/parallel", "ark-std/parallel"]

[dependencies]
merlin = { version = "2.0", default-features = false }
rand = { version = "0.7", default-features = false, features = ["std"] }
zkp-r1cs = { git = "https://github.com/sec-bit/ckb-zkp", package = "zkp-r1cs" }
zkp-curve = { git = "https://github.com/sec-bit/ckb-zkp", package = "zkp-curve" }
ark-ff = { version = "0.2", default-features = false }
ark-poly = {version = "0.2", default-features = false }
ark-ec = {version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.2", default-features = false }
rayon = { version = "1", optional = true }


[dev-dependencies]
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
criterion = "0.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
psutil = "3.2"

[[bench]]
name = "bench_gkr_fold"
harness = false
